--- a/Store.Pgsql.Test/Store.Pgsql.Test.csproj
+++ b/Store.Pgsql.Test/Store.Pgsql.Test.csproj
@@ -35,6 +35,10 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Npgsql, Version=3.1.8.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Npgsql.3.1.8\lib\net45\Npgsql.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="NSpec">
       <HintPath>..\packages\nspec.1.0.7\lib\NSpec.dll</HintPath>
     </Reference>
