--- a/Store.Pgsql/Store.Pgsql.csproj
+++ b/Store.Pgsql/Store.Pgsql.csproj
@@ -31,10 +31,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
-      <HintPath>packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="Npgsql">
-      <HintPath>packages\Npgsql.3.1.8\lib\net45\Npgsql.dll</HintPath>
+      <HintPath>..\packages\Npgsql.3.1.8\lib\net45\Npgsql.dll</HintPath>
     </Reference>
     <Reference Include="Store.Models">
       <HintPath>..\Store.Models\bin\Debug\Store.Models.dll</HintPath>
