--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: "Lukas Himsels persönliche Website mit Themen wie Musik, Klaviere,
 about: "Schüler, der gerne Klavier spielt, Joggen geht und <i>versucht</i>, Websites und Programme zu entwickeln."
 location: "Deutschland, Kitzingen"
 email: lukas@himsel.me
-baseurl: ""
+baseurl: "Store"
 url: "http://himsel.me"
 twitter_username: lukashimsel
 github_username:  lukas-h
