--- a/Store.Pgsql/Store.Pgsql.csproj
+++ b/Store.Pgsql/Store.Pgsql.csproj
@@ -49,7 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="src\Pgsql\Client.cs" />
+    <Compile Include="src\Client.cs" />
     <Compile Include="src\Pgsql\CommandRunner.cs" />
     <Compile Include="src\Pgsql\Extensions.cs" />
     <Compile Include="src\VersionControlManager.cs" />
