Remove legacy projects and BaseClient should be abstract and add Store.Storage.Pgsql.Test

--- a/Store.Storage.Pgsql.Test/Store.Storage.Pgsql.Test.csproj
+++ b/Store.Storage.Pgsql.Test/Store.Storage.Pgsql.Test.csproj
@@ -1,19 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2F0939A7-3606-466E-8FE4-1E3736265F3A}</ProjectGuid>
+    <ProjectGuid>{1456C23B-3D90-490F-B916-5540EB7C1FC7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Store.Pgsql.Test</RootNamespace>
-    <AssemblyName>Store.Pgsql.Test</AssemblyName>
+    <RootNamespace>Store.Storage.Pgsql.Test</RootNamespace>
+    <AssemblyName>Store.Storage.Pgsql.Test</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,16 +22,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
@@ -43,14 +38,18 @@
       <HintPath>..\packages\Npgsql.3.1.8\lib\net45\Npgsql.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="NSpec">
-      <HintPath>..\packages\nspec.1.0.7\lib\NSpec.dll</HintPath>
+    <Reference Include="NSpec, Version=1.0.13.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\nspec.1.0.13\lib\NSpec.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Store.Models">
-      <HintPath>..\Store.Pgsql\bin\Debug\Store.Models.dll</HintPath>
+      <HintPath>..\Store.Storage.Pgsql\bin\Debug\Store.Models.dll</HintPath>
     </Reference>
-    <Reference Include="Store.Pgsql">
-      <HintPath>..\Store.Pgsql\bin\Debug\Store.Pgsql.dll</HintPath>
+    <Reference Include="Store.Storage">
+      <HintPath>..\Store.Storage.Pgsql\bin\Debug\Store.Storage.dll</HintPath>
+    </Reference>
+    <Reference Include="Store.Storage.Pgsql">
+      <HintPath>..\Store.Storage.Pgsql\bin\Debug\Store.Storage.Pgsql.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -58,6 +57,7 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
@@ -69,7 +69,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
