--- a/Store.GraphQL/Store.GraphQL.csproj
+++ b/Store.GraphQL/Store.GraphQL.csproj
@@ -52,6 +52,9 @@
     <Reference Include="Store.Models">
       <HintPath>..\Store.Models\bin\Debug\Store.Models.dll</HintPath>
     </Reference>
+    <Reference Include="Store.Storage">
+      <HintPath>..\Store.Storage\bin\Debug\Store.Storage.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -63,8 +66,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\Extensions.cs" />
     <Compile Include="src\Index.cs" />
-    <Compile Include="src\TimeSpanGraphType.cs" />
+    <Compile Include="src\Resolver.cs" />
     <Compile Include="src\Type.cs" />
   </ItemGroup>
   <ItemGroup>
