--- a/Store.GraphQL/Store.GraphQL.csproj
+++ b/Store.GraphQL/Store.GraphQL.csproj
@@ -66,8 +66,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\Base.cs" />
     <Compile Include="src\Extensions.cs" />
     <Compile Include="src\Index.cs" />
+    <Compile Include="src\Mutation.cs" />
+    <Compile Include="src\Query.cs" />
     <Compile Include="src\Resolver.cs" />
     <Compile Include="src\Type.cs" />
   </ItemGroup>
