--- a/Store.GraphQL/Store.GraphQL.csproj
+++ b/Store.GraphQL/Store.GraphQL.csproj
@@ -11,6 +11,7 @@
     <AssemblyName>Store.GraphQL</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -73,8 +74,13 @@
     <Compile Include="src\Query.cs" />
     <Compile Include="src\Resolver.cs" />
     <Compile Include="src\Type.cs" />
+    <Compile Include="util\Helper.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
+    <None Include="gql\introspection-query.gql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
