--- a/Store.GraphQL/Store.GraphQL.csproj
+++ b/Store.GraphQL/Store.GraphQL.csproj
@@ -67,6 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\GQLAuthorization.cs" />
     <Compile Include="src\GQLBase.cs" />
     <Compile Include="src\GQLExtensions.cs" />
     <Compile Include="src\GQLInterface.cs" />
