--- a/Store.Reports/Store.Reports.csproj
+++ b/Store.Reports/Store.Reports.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D66963F9-EF98-4A72-AA51-5758C7D7011B}</ProjectGuid>
+    <ProjectGuid>{77B8440C-7AE7-49BB-8850-CE9B62F09A5C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Store.Storage.SqlServer</RootNamespace>
-    <AssemblyName>Store.Storage.SqlServer</AssemblyName>
+    <RootNamespace>Store.Reports</RootNamespace>
+    <AssemblyName>Store.Reports</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,8 +41,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="src\Client.cs" />
+    <Compile Include="src\Extensions.cs" />
+    <Compile Include="src\ReportFactory.cs" />
+    <Compile Include="src\ReportTheme.cs" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\Store.Models\Store.Models.csproj">
       <Project>{3fa3d494-3c1e-4a45-b928-669a64683c70}</Project>
