--- a/Store.Reports.Formats/packages.config
+++ b/Store.Reports.Formats/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FSharp.Core" version="4.3.3" targetFramework="net45" />
+  <package id="FSharp.Core" version="3.1.2.5" targetFramework="net45" />
+  <package id="FsUnit" version="3.8.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
   <package id="NPOI" version="2.4.1" targetFramework="net45" />
+  <package id="NUnit" version="3.12.0" targetFramework="net45" />
   <package id="SharpZipLib" version="1.0.0" targetFramework="net45" />
 </packages>
