--- a/Store.Reports.Formats/packages.config
+++ b/Store.Reports.Formats/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Dynamitey" version="2.0.10.189" targetFramework="net45" />
+  <package id="FAKE.Core" version="5.16.0" targetFramework="net45" />
   <package id="FSharp.Core" version="4.2.3" targetFramework="net45" />
   <package id="FSharp.Interop.Dynamic" version="5.0.1.268" targetFramework="net45" />
   <package id="FsUnit" version="3.8.0" targetFramework="net45" />
