--- a/Store.Storage.Pgsql.Test/Store.Storage.Pgsql.Test.csproj
+++ b/Store.Storage.Pgsql.Test/Store.Storage.Pgsql.Test.csproj
@@ -45,15 +45,6 @@
       <HintPath>..\packages\nspec.1.0.13\lib\NSpec.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Store.Models">
-      <HintPath>..\Store.Models\bin\Debug\Store.Models.dll</HintPath>
-    </Reference>
-    <Reference Include="Store.Storage">
-      <HintPath>..\Store.Storage\bin\Debug\Store.Storage.dll</HintPath>
-    </Reference>
-    <Reference Include="Store.Storage.Pgsql">
-      <HintPath>..\Store.Storage.Pgsql\bin\Debug\Store.Storage.Pgsql.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -73,6 +64,20 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Store.Models\Store.Models.csproj">
+      <Project>{3FA3D494-3C1E-4A45-B928-669A64683C70}</Project>
+      <Name>Store.Models</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Store.Storage\Store.Storage.csproj">
+      <Project>{ED21115B-8E08-4CC1-8761-34842174BE8A}</Project>
+      <Name>Store.Storage</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Store.Storage.Pgsql\Store.Storage.Pgsql.csproj">
+      <Project>{CC371F81-9AA3-497F-8809-459EC07A0C69}</Project>
+      <Name>Store.Storage.Pgsql</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
