--- a/Store.Reports.Formats.Test/packages.config
+++ b/Store.Reports.Formats.Test/packages.config
@@ -6,8 +6,9 @@
   <package id="FSharp.Interop.Dynamic" version="5.0.1.268" targetFramework="net451" />
   <package id="FsUnit" version="3.8.0" targetFramework="net46" />
   <package id="Microsoft.CSharp" version="4.6.0" targetFramework="net451" />
-  <package id="NPOI" version="2.4.1" targetFramework="net46" />
+  <package id="NPOI" version="2.5.2" targetFramework="net46" />
   <package id="NUnit" version="3.12.0" targetFramework="net451" />
   <package id="NUnit.ConsoleRunner" version="3.10.0" targetFramework="net451" />
-  <package id="SharpZipLib" version="1.0.0" targetFramework="net46" />
+  <package id="Portable.BouncyCastle" version="1.8.6" targetFramework="net46" />
+  <package id="SharpZipLib" version="1.3.1" targetFramework="net46" />
 </packages>
