--- a/Store.Reports.Formats.Test/packages.config
+++ b/Store.Reports.Formats.Test/packages.config
@@ -4,11 +4,11 @@
   <package id="FAKE" version="4.64.17" targetFramework="net451" />
   <package id="FSharp.Core" version="4.2.3" targetFramework="net46" />
   <package id="FSharp.Interop.Dynamic" version="5.0.1.268" targetFramework="net451" />
-  <package id="FsUnit" version="3.8.0" targetFramework="net46" requireReinstallation="true" />
+  <package id="FsUnit" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.CSharp" version="4.6.0" targetFramework="net451" />
+  <package id="NPOI" version="2.4.1" targetFramework="net45" />
   <package id="NUnit" version="3.12.0" targetFramework="net451" />
   <package id="NUnit.ConsoleRunner" version="3.10.0" targetFramework="net451" />
-  <package id="NPOI" version="2.4.1" targetFramework="net45" />
   <package id="Portable.BouncyCastle" version="1.8.6" targetFramework="net45" />
   <package id="SharpZipLib" version="1.2.0" targetFramework="net45" />
 </packages>
